syntax = "proto3";

package ibc.lightclients.qbft.v1;

import "ibc/core/client/v1/client.proto";

message ClientState {
  bytes chain_id = 1;
  bytes ibc_store_address = 2;
  ibc.core.client.v1.Height latest_height = 3;
  uint64 trusting_period = 4;
}

message ConsensusState {
  uint64 timestamp = 1;
  bytes root = 2;
  repeated bytes validators = 3;
}

message Header {
  bytes besu_header_rlp = 1;
  repeated bytes seals = 2;
  ibc.core.client.v1.Height trusted_height = 3;
  bytes account_state_proof = 4;
}
